@@ -1,3 +1,6 @@
+BatchExperiments_x.x
+- Problem and algorithm ids may now contain the dot char (".").
+
 BatchExperiments_1.3
 - Updated to use RSQLite >=1.0.0
 - Argument 'progressbar' added to multiple functions to suppress displaying the
